--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 version: '3'
 services:
-  nginx:
+  nginx-certbot:
     build: .
-    image: nginx-certbot
     container_name: nginx-certbot
+    env_file: .env
+    image: rabbotio/nginx-certbot
+    restart: on-failure
+    volumes:
+      - ./etc/nginx/conf.d:/etc/nginx/conf.d
+      - ./etc/ssl/dhparams.pem:/etc/ssl/dhparams.pem
+      - ./var/www/html:/var/www/html
+      - ./root:/root
+    links:
+      - nginx
+      - certbot
+    command:
+      # - docker run certbot/certbot:latest certonly --dry-run --email "$CERTBOT_EMAIL" -n --webroot -w $ACME_WWWROOT -d $DOMAIN -d www.$DOMAIN
+      - "init.sh"
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
     env_file: .env
     restart: on-failure
     networks:
       - back
     volumes:
-      - /etc/ssl/dhparams.pem:/etc/ssl/dhparams.pem
-      - /etc/letsencrypt/live:/etc/letsencrypt/live
+      - ./etc/nginx/conf.d:/etc/nginx/conf.d
+      - ./etc/ssl/dhparams.pem:/etc/ssl/dhparams.pem
+      - ./var/www/html:/var/www/html
     logging:
       driver: json-file
       options:
@@ -19,26 +37,21 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    command: ". ./dhparam.sh"
 
   certbot:
-    image: certbot:latest
+    image: certbot/certbot:latest
     container_name: certbot
     env_file: .env
     restart: on-failure
     environment:
       - DOMAIN=$DOMAIN
       - CERTBOT_EMAIL=$CERTBOT_EMAIL
+      - ACME_WWWROOT=${ACME_WWWROOT:-/var/www/html}
     networks:
       - back
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/lib/letsencrypt:/var/lib/letsencrypt
-      - /var/log/letsencrypt:/var/log/letsencrypt
-    ports:
-      - "80:80"
-      - "443:443"
-    command: "DOMAIN=$DOMAIN CERTBOT_EMAIL=$CERTBOT_EMAIL . ./init.sh"
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./var/log/letsencrypt:/var/log/letsencrypt
 
 networks:
   back:
