--- a/etc/nginx/conf.d/amp.conf
+++ b/etc/nginx/conf.d/amp.conf
@@ -8,5 +8,5 @@ add_header Content-Security-Policy "
 
 # AMP
 add_header Access-Control-Allow-Origin "*.ampproject.org";
-add_header AMP-Access-Control-Allow-Source-Origin "https://{{DOMAIN}}";
+add_header AMP-Access-Control-Allow-Source-Origin "https://rabbot.io";
 add_header Access-Control-Expose-Headers "AMP-Access-Control-Allow-Source-Origin";
