--- a/etc/nginx/conf.d/https.conf
+++ b/etc/nginx/conf.d/https.conf
@@ -1,7 +1,34 @@
+# Cross Site Script
+add_header X-Frame-Options "SAMEORIGIN" always;
+add_header X-Content-Type-Options "nosniff" always;
+add_header X-Xss-Protection "1";
+
+# HSTS(HTTP Strict Transport Security) https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
+# to avoid ssl stripping https://en.wikipedia.org/wiki/SSL_stripping#SSL_stripping
+add_header Strict-Transport-Security "max-age=31557600;" always;
+
+# CSP
+add_header Content-Security-Policy "default-src 'self'
+  script-src    https: *.google-analytics.com cdn.ampproject.org 'sha256-SYto7HB+/GJNcLL8K8V2a/TcrYa7vjo31poLSaS1c54=';
+  font-src      fonts.googleapis.com fonts.gstatic.com;
+  style-src     fonts.googleapis.com 'unsafe-inline';
+  img-src       data: amp-error-reporting.appspot.com;
+  connect-src   https://www.google-analytics.com;";
+
+# AMP
+add_header Access-Control-Allow-Origin "*.ampproject.org";
+add_header AMP-Access-Control-Allow-Source-Origin "https://{{DOMAIN}}";
+add_header Access-Control-Expose-Headers "AMP-Access-Control-Allow-Source-Origin";
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
   server_name default_server;
+
+  # Certbot challenge handling
+  location /.well-known/acme-challenge/ {
+      root  /usr/share/nginx/html;
+  }
 
   # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
   location / {
@@ -42,7 +69,59 @@ server {
   # https://weakdh.org/sysadmin.html
   ssl_dhparam "/etc/ssl/dhparams.pem";
 
-  # Default
+  # Guard
+  location = /favicon.ico {
+    try_files $uri =204;
+    log_not_found off;
+    access_log off;
+  }
+
+  location = /robots.txt {
+    allow all;
+    log_not_found off;
+    access_log off;
+  }
+
+  location = /readme.html {
+    return 404;
+  }
+
+  location ~* ^.*(\.(?:git|svn|htaccess|txt|pot?))$ {
+    return 404;
+  }
+
+  location ~ /\. {
+    deny all;
+  }
+
+  location ~* \.flv$ {
+    flv;
+  }
+
+  location ~* .*\.(?:m4a|mp4|mov)$ {
+    mp4;
+    mp4_buffer_size   1M;
+    mp4_max_buffer_size 5M;
+  }
+
+  location ~* ^.+\.(?:ogg|pdf|pptx?)$ {
+    expires max;
+    tcp_nodelay off;
+  }
+
+  # Directives to send expires headers and turn off 404 error logging.
+  location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|woff2|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+    access_log off; log_not_found off; expires max;
+  }
+
+  # Nginx logs every request that hits the VPS to a log file.
+  access_log off;
+
+  # Add a trailing slash to path
+  rewrite ^([^?#]*/)([^?#./]+)([?#].*)?$ $1$2/$3 permanent;
+
+  # Default root path
+  root /var/www/{{DOMAIN}};
   location / {
     index index.html;
   }
