--- a/etc/nginx/conf.d/http.conf
+++ b/etc/nginx/conf.d/http.conf
@@ -5,6 +5,10 @@ server {
 
   # Certbot challenge handling
   location /.well-known/acme-challenge/ {
-      root  /usr/share/nginx/html;
+      root /usr/share/nginx/html;
+  }
+
+  location / {
+      root /usr/share/nginx/html;
   }
 }
